--- a/class1.html
+++ b/class1.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>class1</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+<!-- 10-1 Panda commerce overview and project setup -->
 <body>
-    
+    <h1>Hello Panda</h1>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
